# Federation

./: .gitignore  Federation_Map.md  test_edit.md
Apps/ChromaDB_Browser/: RAG_ENHANCEMENT.md  README.md  README_LAUNCHERS.md  export_memories.py  launch_browser.py  launch_federation_tools.py  launch_rag_browser.sh  memory_browser_app.py  memory_browser_v5_dark.py  minimal_memory_viewer.py  open_memory_browser.command  rag_search_app.py  rag_search_cli.py  simple_memory_browser.py  simple_memory_viewer.py  test_browser_issues.py  test_chromadb_connection.py  test_memory_browser_cli.py  test_rag_direct.py  test_rag_search.py  test_simple_tk.py  test_v5_minimal.py
Apps/ChromaDB_Browser/docs/: BROWSER_DEBUG_LOG.md  QUICK_MEMORY_SEARCH.md  (+5 more)
Apps/GitHub/: README.md  federation-sync.sh
Documents/BackupProcesses/: Backup_Protocols_Guide.md  Recovery_Checklist.md  chromadb_emergency.py  health_check.py  obsidian_emergency.py  unified_search.py
Documents/CC_DOCS/: Nerve_Center
Documents/DT_DOCS/: 20250611_DTPreferences copy.md  DTPreferences.md  DT_Nerve_Center
Documents/Identities/: cc_identity.json  desktop_claude_identity.json  gem_identity.json  sam_identity.json  socks_identity.json  trips_identity.json
System/DevTools/: install_dependencies.sh  test_server.py
System/Federation-MCPs/FederationCode/: README.md  federation_code_mcp.py  install.sh  pyproject.toml  run_fastmcp_server.py  run_minimal_server.py  run_server.py  run_simple_server.py  test_simple.py
System/Federation-MCPs/FederationCode/src/federation_code/: __init__.py  server.py
System/Federation-MCPs/FederationCode/src/federation_code/analyzers/: __init__.py  ast_analyzer.py  base.py  security_analyzer.py
System/Federation-MCPs/FederationCode/src/federation_code/core/: __init__.py  async_engine.py
System/Federation-MCPs/FederationCode/src/federation_code/tools/: __init__.py  analyze.py  base.py  cancel.py  get.py  status.py
System/Federation-MCPs/FederationCode/tests/: __init__.py  test_basic.py
System/Federation-MCPs/FederationCommander/: README.md  install.sh  pyproject.toml
System/Federation-MCPs/FederationCommander/src/federation_commander/: __init__.py  server.py
System/Federation-MCPs/FederationCommander/src/federation_commander/tools/: __init__.py  base.py  config.py  edit.py  file.py  find.py  git.py  memory.py  ps.py  run.py  task.py  watch.py
System/Federation-MCPs/FederationCommander/src/federation_commander/utils/: __init__.py  config.py  federation.py
System/Federation-MCPs/FederationThinking/: CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  README.md  install.sh  pyproject.toml  run_server.py
System/Federation-MCPs/FederationThinking/src/federation_thinking/: __init__.py  __main__.py  config.py  memory.py  models.py  server.py  session.py  visualization.py
System/Federation-MCPs/FederationThinking/src/federation_thinking.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
System/Federation-MCPs/FederationWeb/: README.md  install.py  pyproject.toml  test_brave.py  test_search.py  test_server.py
System/Federation-MCPs/FederationWeb/src/federation_web/: __init__.py  server.py
System/Federation-MCPs/FederationWeb/src/federation_web.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
System/Federation-MCPs/FederationWeb/src/federation_web/core/: cache.py  context.py  extraction.py  providers.py  react.py
System/Federation-MCPs/FederationWeb/src/federation_web/tools/: base.py  interests.py  research.py
System/Federation-MCPs/FederationWeb/src/federation_web/utils/: config.py
System/MaintScripts/: test_shared_metrics_dt.py
System/Memory/: FEDERATION_MEMORY_COMPLETE.md  README.md
System/TaskTracker/: README.md  TaskTracker.md
Tasks/: manifest.json  relationships.json
(+388 files in other folders)
