[tool.poetry]
name = "federation-code-mcp"
version = "1.0.0"
description = "Non-blocking code intelligence MCP for the Federation"
authors = ["CC (Claude Code)"]
readme = "README.md"
packages = [{include = "federation_code", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
mcp = "^1.0.0"
chromadb = "^0.4.22"
aiofiles = "^23.2.1"
gitpython = "^3.1.40"
pygments = "^2.17.2"
# tree-sitter support will be added later
# tree-sitter = "^0.21.0"
# tree-sitter-python = "^0.21.0"
pydantic = "^2.5.3"
cachetools = "^5.3.2"
diskcache = "^5.6.3"
tenacity = "^8.2.3"
watchdog = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.12.1"
ruff = "^0.1.11"
mypy = "^1.8.0"

[tool.poetry.scripts]
federation-code = "federation_code.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "B", "C90", "UP", "ANN", "S", "A", "C4", "T20", "SIM", "ARG"]
ignore = ["ANN101", "ANN102", "S101"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true