[project]
name = "federation-commander"
version = "1.0.0"
description = "Streamlined MCP for Federation workflow - better than Desktop Commander"
authors = [{name = "CC for Sam", email = "noreply@federation.local"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "chromadb>=0.5.0",
    "GitPython>=3.1.0",
    "watchdog>=3.0.0",
    "psutil>=5.9.0",
    "aiofiles>=23.0.0",
    "rich>=13.0.0",
]

[project.scripts]
federation-commander = "federation_commander.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/federation_commander"]